removed auth data refactoring removed sleep()